# codecrafters-sqlite

./: .coverage  .gitignore  Cargo.toml  README.md  companies.dbinfo  coverage.json  debug.db  pyproject.toml  superheroes.dbinfo  test_cells.py  test_dbinfo.py  test_dbpage.py  test_main.py  test_varint.py  test_varint_performance.py  your_sqlite3.ps1
app/: __init__.py  cells.py  main.py  varint.py
python/codecrafters_sqlite/: __init__.py  cells.py  main.py
python/tests/: test_cells.py  test_dbinfo.py  test_dbpage.py  test_main.py  test_varint.py  test_varint_performance.py
src/: bin.rs  lib.rs  main.rs  run_perf_test.rs
