[package]
name = "codecrafters-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "codecrafters_sqlite"
crate-type = [
    "cdylib",
    "lib",
]

[profile.release]
debug = true

[[bin]]
name = "run_perf_test"
path = "src/run_perf_test.rs"

[dependencies.pyo3]
version = "0.22.0"
features = ["auto-initialize", "gil-refs"]
